Chef Automate/nested/chefp2p-complianceserver.json
{
    "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "location": {
            "type": "string",
            "defaultValue": ""
        },
        "compute-api-version": {
            "type": "string",
            "defaultValue": ""
        },
        "vm-name": {
            "type": "string",
            "defaultValue": ""
        },
        "complianceimageOffer": {
            "type": "object",
            "defaultValue": ""
        },
        "vm-size": {
            "type": "string",
            "defaultValue": ""
        },
        "vm-adminName": {
            "type": "string",
            "defaultValue": ""
        },
        "vm-adminPassword": {
            "type": "string",
            "defaultValue": ""
        },
        "storageAccount-name": {
            "type": "string",
            "defaultValue": ""
        },
        "networkInterface-name": {
            "type": "string",
            "defaultValue": ""
        },
        "network-api-version2": {
            "type": "string",
            "defaultValue": ""
        },
        "securityGroup-name": {
            "type": "string",
            "defaultValue": ""
        },
        "publicIP-name": {
            "type": "string",
            "defaultValue": ""
        },
        "dnsLabelPrefix": {
            "type": "string",
            "defaultValue": ""
        },
        "complianceprivateIPAddress": {
            "type": "string",
            "defaultValue": ""
        },
        "subnet1ID": {
            "type": "string",
            "defaultValue": ""
        },
        "extension-api-version": {
            "type": "string",
            "defaultValue": ""
        },
        "baseUrl": {
            "type": "string",
            "defaultValue": ""
        }
    },
    "variables": {},
    "resources": [
        {
            "type": "Microsoft.Compute/virtualMachines",
            "name": "[parameters('vm-name')]",
            "apiVersion": "[parameters('compute-api-version')]",
            "location": "[parameters('location')]",
            "plan": {
                "name": "[parameters('complianceimageOffer').sku]",
                "product": "[parameters('complianceimageOffer').offer]",
                "publisher": "[parameters('complianceimageOffer').publisher]"
            },
            "properties": {
                "hardwareProfile": {
                    "vmSize": "[parameters('vm-size')]"
                },
                "storageProfile": {
                    "imageReference": {
                        "publisher": "[parameters('complianceimageOffer').publisher]",
                        "offer": "[parameters('complianceimageOffer').offer]",
                        "sku": "[parameters('complianceimageOffer').sku]",
                        "version": "latest"
                    },
                    "osDisk": {
                        "name": "[parameters('vm-name')]",
                        "createOption": "FromImage",
                        "vhd": {
                            "uri": "[concat('https://', parameters('storageAccount-name'), '.blob.core.windows.net', concat('/vhds/', parameters('vm-name'),'.vhd'))]"
                        },
                        "caching": "ReadWrite"
                    },
                    "dataDisks": []
                },
                "osProfile": {
                    "computerName": "[parameters('vm-name')]",
                    "adminUsername": "[parameters('vm-adminName')]",
                    "linuxConfiguration": {
                        "disablePasswordAuthentication": false
                    },
                    "secrets": [],
                    "adminPassword": "[parameters('vm-adminPassword')]"
                },
                "networkProfile": {
                    "networkInterfaces": [
                        {
                            "id": "[resourceId('Microsoft.Network/networkInterfaces',parameters('networkInterface-name'))]",
                            "properties": {
                                "primary": true
                            }
                        }
                    ]
                }
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkInterfaces',parameters('networkInterface-name'))]"
            ]
        },
        {
            "type": "Microsoft.Network/networkSecurityGroups",
            "name": "[parameters('securityGroup-name')]",
            "apiVersion": "[parameters('network-api-version2')]",
            "location": "[parameters('location')]",
            "properties": {
                "securityRules": [
                    {
                        "name": "ssh",
                        "properties": {
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "22",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 1010,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "http",
                        "properties": {
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "80",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 1020,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "https",
                        "properties": {
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "443",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 1030,
                            "direction": "Inbound"
                        }
                    }
                ]
            },
            "dependsOn": []
        },
        {
            "type": "Microsoft.Network/publicIPAddresses",
            "name": "[parameters('publicIP-name')]",
            "apiVersion": "[parameters('network-api-version2')]",
            "location": "[parameters('location')]",
            "properties": {
                "publicIPAllocationMethod": "Dynamic",
                "idleTimeoutInMinutes": 4,
                "dnsSettings": {
                    "domainNameLabel": "[parameters('dnsLabelPrefix')]"
                }
            },
            "dependsOn": []
        },
        {
            "type": "Microsoft.Network/networkInterfaces",
            "name": "[parameters('networkInterface-name')]",
            "apiVersion": "[parameters('network-api-version2')]",
            "location": "[parameters('location')]",
            "properties": {
                "ipConfigurations": [
                    {
                        "name": "ipconfig1",
                        "properties": {
                            "privateIPAddress": "[parameters('complianceprivateIPAddress')]",
                            "privateIPAllocationMethod": "Static",
                            "publicIPAddress": {
                                "id": "[resourceId('Microsoft.Network/publicIPAddresses',parameters('publicIP-name'))]"
                            },
                            "subnet": {
                                "id": "[parameters('subnet1ID')]"
                            }
                        }
                    }
                ],
                "dnsSettings": {
                    "domainNameLabel": "[parameters('dnsLabelPrefix')]"
                },
                "enableIPForwarding": false,
                "networkSecurityGroup": {
                    "id": "[resourceId('Microsoft.Network/networkSecurityGroups',parameters('securityGroup-name'))]"
                }
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/publicIPAddresses',parameters('publicIP-name'))]",
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('securityGroup-name'))]"
            ]
        }

    ]
}
